# enda

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Example D.ipynb  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: docs.yml
docs/: enda.html  index.html  search.js
docs/enda/: backtesting.html  config.html  contracts.html  estimators.html  feature_engineering.html  ml_backends.html  power_predictor.html  power_stations.html  scoring.html  timeseries.html  timezone_utils.html  tools.html
docs/enda/feature_engineering/: calendar.html  datetime_features.html
docs/enda/ml_backends/: h2o_estimator.html  h2o_model.html  sklearn_estimator.html
docs/enda/tools/: decorators.html  portfolio_tools.html  resample.html  timeseries.html  timezone_utils.html
enda/: __init__.py  backtesting.py  config.py  contracts.py  datetime_features.py  decorators.py  estimators.py  models.py  power_predictor.py  power_stations.py  resample.py  scoring.py  timeseries.py  timezone_utils.py  tmp.py
enda/feature_engineering/: calendar.py  datetime_features.py
enda/ml_backends/: h2o_estimator.py  h2o_model.py  linear_regression.py  sklearn_estimator.py  sklearn_linreg.py
enda/tools/: decorators.py  portfolio_tools.py  resample.py  timeseries.py  timezone_utils.py
guides/: Building this package.md  Electricity load forecast.md  ElectricityLoadForecast.md  Example A.ipynb  Example B.ipynb  Example C.ipynb  README.md  example_c.py
guides/ExampleA/: ExampleA.html  ExampleA.ipynb
guides/ExampleB/: ExampleB.html  ExampleB.ipynb
guides/ExampleC/: example_c.py
guides/ExampleC_load/: example_c.py
tests/: test_backtesting.py  test_calendar.py  test_contracts.py  test_datetime_feature.py  test_datetime_features.py  test_decorators.py  test_estimators.py  test_h2o_estimator.py  test_models.py  test_portfolio_tools.py  test_power_predictor.py  test_power_stations.py  test_resample.py  test_scoring.py  test_sklearn_estimator.py  test_timeseries.py  test_timezone_utils.py  test_utils.py
tests/data/contracts/: contracts_no_date.csv
tests/data/outages/: outages.csv  outages_wrong_dates.csv
tests/example_a/: contracts.csv  historic_load_measured.csv  weather_and_tso_forecasts.csv
tests/example_d/: events.csv  forecast_river.csv  forecast_solar.csv  forecast_wind.csv  historic_meteo_solar.csv  historic_meteo_wind.csv  wind_stations.csv
tests/example_d/river/: stations_river.csv
tests/example_d/solar/: stations_solar.csv  weather_forecast_solar.csv
tests/example_d/wind/: weather_forecast_wind.csv
tests/unittests_data/contracts/: contracts.csv
tests/unittests_data/outages/: outages_timestamp.csv  outages_wrong_values.csv
