[tool.poetry]
authors = ["Enercoop <team-data@enercoop.org>"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
description = "Tools to manipulate energy time-series and contracts, and to perform forecasts."
exclude = ["tests"]
license = "MIT"
name = "enda"
packages = [
  {include = "enda"},
]
readme = "README.md"
repository = "https://github.com/enercoop/enda"
version = "1.0.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/enercoop/enda/issues"

[tool.poetry.dependencies]
h2o = "^3.36.2.2"
jours-feries-france = {version = "^0.7.0"}
pandas = ">=1.4.0,<2.0.0"
python = ">=3.9.0,<3.11"
scikit-learn = "^1.0.2"
statsmodels = "<=0.13.5"
unidecode = {version = "^1.3.6"}
vacances-scolaires-france = {version = "^0.10.0"}


[tool.poetry.group.examples.dependencies]
joblib = {version = "^1.3.0"}
jupyter = {version = "^1.0.0"}
matplotlib = {version = "^3.5.3"}
numexpr = {version = "^2.8.4"}
numpy = {version = "^1.18"}
seaborn = {version = "^0.12.2"}

[tool.poetry.group.dev.dependencies]
black = {version = "^23.3.0"}
coverage = {version = "^7.2.7"}
ipykernel = {version = "^6.16.2"}
pre-commit = {version = "<3.3.3"}
pylint = {version = "^1.7.0"}
pytest = {version = "^7.4.0"}
setuptools = {version = "^68.0.0"}
tox = {version = "^4.6.3"}
twine = {version = "^4.0.2"}
wheel = {version = "^0.40.0"}
isort = "<5.12.0"

[tool.poetry.extras]
all = [
  "black",
  "ipykernel",
  "pre-commit",
  "pylint",
  "setuptools",
  "tox",
  "twine",
  "wheel",
  "bottleneck",
  "h2o",
  "joblib",
  "jours-feries-france",
  "jupyter",
  "matplotlib",
  "numexpr",
  "numpy",
  "scikit-learn",
  "seaborn",
  "statsmodels",
  "unidecode",
  "vacances-scolaires-france",
  "coverage",
]
dev = [
  "black",
  "ipykernel",
  "pre-commit",
  "pylint",
  "setuptools",
  "tox",
  "twine",
  "wheel",
  "coverage",
]
examples = [
  "bottleneck",
  "h2o",
  "joblib",
  "jupyter",
  "matplotlib",
  "numexpr",
  "numpy",
  "scikit-learn",
  "seaborn",
  "statsmodels",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core", "oldest-supported-numpy"]

[[tool.poetry_bumpversion.replacements]]
files = ["enda/__init__.py"]
replace = '__version__ = "{new_version}"'
search = '__version__ = "{current_version}"'
