[tool.poetry]
name = "enda"
version = "1.0.3"
description = "Tools to manipulate energy time-series and contracts, and to perform forecasts."
authors = ["Enercoop <team-data@enercoop.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/enercoop/enda"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/enercoop/enda/issues"

[tool.poetry.dependencies]
python = "^3.9.0"
pandas = ">=1.4.0,<2.0.0"
numpy = "^1.18"
datatable = "^1.1.0"
h2o = "^3.38.0.1"
jours-feries-france = "^0.7.0"
polars = "^0.20.0"
scikit-learn = "^1.0.2"
statsmodels = "<=0.13.5"
unidecode = "^1.3.4"
vacances-scolaires-france = "^0.10.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = {version = "^23.3.0"}
coverage = {version = "^7.2.7"}
ipykernel = {version = "^6.16.2"}
isort= {version = "<5.12.0"}
pdoc = {version = "^14.0.0"}
pre-commit = {version = "<3.3.3"}
pylint = {version = "2.17.0"}
pytest = {version = "^7.4.0"}
setuptools = {version = "^68.0.0"}
tox = {version = "^4.6.3"}
twine = {version = "^4.0.2"}
wheel = {version = "^0.40.0"}

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
joblib = {version = "^1.3.0"}
jupyter = {version = "^1.0.0"}
matplotlib = {version = "^3.5.3"}
numexpr = {version = "^2.8.4"}
seaborn = {version = "^0.12.2"}

[tool.poetry.extras]
dev = [
  "black",
  "coverage",
  "ipykernel",
  "pre-commit",
  "pylint",
  "setuptools",
  "tox",
  "twine",
  "wheel",
]
examples = [
  "joblib",
  "jupyter",
  "matplotlib",
  "numexpr",
  "seaborn",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry_bumpversion.replacements]]
files = ["enda/__init__.py"]
replace = '__version__ = "{new_version}"'
search = '__version__ = "{current_version}"'
